# llm-chat

./: .env.example  .gitignore  .isort.cfg  .mypy.ini  CHANGELOG.md  CONVENTIONS.md  README.es.md  README.md  mutmut_config.py  pyproject.toml
dev/: schema.md
examples/: .isort.cfg  shop.py  shop_data.py  tools.py
examples/shop/: __main__.py  config.toml.example  function_calling.py  items.csv  main.py  prompt_generator.py  prompts.py  read_config.py  repository.py  tools.py  types.py
src/: ahora.py  client_wrapper.py  command_handler.py  controller.py  debug.py  domain.py  engine.py  generic_view.py  io_helpers.py  logging.py  main.py  menu_manager.py  model_choice.py  model_manager.py  models_data.py  placeholders.py  protocols.py  settings.py  setup_engine.py  setup_logging.py  strategies.py  utils.py  view.py  views.py
src/controllers/: __init__.py  build_controllers.py  command_interpreter.py  controllers.py  conversation_loader.py  extras.py  final_query_extractor.py  menu_manager.py  query_answerer.py  select_model.py
src/infrastructure/: ahora.py  chat_file_detecter.py  chat_repository_implementer.py  client_wrapper.py  conversation_id_provider.py  exceptions.py  main_path_provider.py  mistral_client_wrapper.py  now.py  openai_client_wrapper.py  parsed_line.py  repository.py
src/models/: messages_ops.py  model_choice.py  model_wrapper.py  parsed_line.py  placeholders.py  serialization.py  shared.py
src/serde/: __init__.py  deserialize.py  serialize.py  shared.py
src/view/: view.py  (+4 more)
tests/: objects.py  test_build_conversation.py  test_build_queries.py  test_build_questions.py  test_chat_repository.py  test_command_handler.py  test_command_interpreter.py  test_engine.py  test_find_placeholders.py  test_load_conversation.py  test_move_chat_files.py  test_parse_conversation.py  test_remove_duplicates.py  test_repository_impl.py  test_select_model.py  test_tags.py
(+23 files in other folders)
