[tool.poetry]
name = "llm-chat"
version = "0.5.0"
description = "Text interface to interact with LLM models"
authors = ["gulliver-madrid <49131885+gulliver-madrid@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mistralai = "^0.1.3"
openai = "^1.14.1"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
