[tool.poetry]
name = "mistral-chat"
version = "0.4.0"
description = "Text interface to interact with Mistral models"
authors = ["gulliver-madrid <49131885+gulliver-madrid@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mistralai = "^0.1.3"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
