[tool.poetry]
name = "llm-chat"
version = "0.6.0"
description = "Text interface to interact with LLM models"
authors = ["gulliver-madrid <49131885+gulliver-madrid@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mutmut]
paths_to_mutate="src"
paths_to_exclude="src/python_modules,src/setup_logging.py"
runner="poetry run pytest -x && poetry run mypy --no-error-summary"
tests_dir="tests"

[tool.poetry.dependencies]
python = "^3.10"
mistralai = "^0.1.3"
openai = "^1.14.1"
rich = "^13.7.1"
python-dotenv = "^1.0.1"
tomlkit = "^0.12.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
coverage = "^7.4.4"
hammett = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
